# idle-skilling-basketball

./: .gitignore  CMakeLists.txt  README.md
include/: Buffer.h  ImageHelper.h  ScreenHelper.h  ScreenShot.h  Thread.h  Training.h  Version.h
src/: ImageHelper.cpp  ScreenHelper.cpp  ScreenShot.cpp  Thread.cpp  Training.cpp  Version.cpp  main.cpp
